--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.5.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id "org.flywaydb.flyway" version "7.15.0"
     id 'java'
     id 'war'
 }
@@ -17,10 +18,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.session:spring-session-hazelcast'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     runtimeOnly 'org.postgresql:postgresql'
+    implementation group: 'com.hazelcast', name: 'hazelcast', version: '3.8.1'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+}
+
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/ams'
+    user = 'postgres'
+    password = 'postgres'
 }
 
 test {
