--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,10 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     runtimeOnly 'org.postgresql:postgresql'
     implementation group: 'com.hazelcast', name: 'hazelcast', version: '3.8.1'
-    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+    implementation group: 'org.apache.cxf', name: 'cxf-core', version: '3.0.4'
+
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
