--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation group: 'com.hazelcast', name: 'hazelcast', version: '3.8.1'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
-    implementation group: 'org.apache.cxf', name: 'cxf-core', version: '3.0.4'
+    //implementation group: 'org.apache.cxf', name: 'cxf-core', version: '3.0.4'
+    implementation 'com.google.guava:guava:20.0'
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
