--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-#spring.mvc.servlet.path=/api
+spring.mvc.servlet.path=/api
 spring.security.authentication.jwt.validity=1800
 integration.dadata.api.key=83557a442cc4b29a39b20bbf93d65e6850cacba6
 integration.dadata.url.inn=https://suggestions.dadata.ru/suggestions/api/4_1/rs/findById/party
 integration.dadata.url.suggest=https://suggestions.dadata.ru/suggestions/api/4_1/rs/suggest/party
+deployment-resource-pattern = classpath:workflow/*.bpmn
