--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,13 @@ dependencies {
     implementation group: 'com.hazelcast', name: 'hazelcast', version: '3.8.1'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
-    //implementation group: 'org.apache.cxf', name: 'cxf-core', version: '3.0.4'
     implementation 'com.google.guava:guava:20.0'
+
+    implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-webapp:7.15.0'
+    implementation 'org.camunda.spin:camunda-spin-dataformat-json-jackson:1.12.0'
+    implementation 'org.camunda.spin:camunda-spin-core:1.12.0'
+    implementation 'org.camunda.bpm:camunda-engine-plugin-spin:7.15.0'
+    implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-rest:7.15.0'
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
