--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+    maven { url "https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/" }
 }
 
 dependencies {
